--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,13 @@
 service:
   name: halfway-serverless-api
+# app and org for use with dashboard.serverless.com
 #app: your-app-name
-#tenant: your-tenant-name
+#org: your-org-name
+
+custom:
+  webpack:
+    webpackConfig: ./webpack.config.js
+    includeModules: true
 
 # Add the serverless-webpack plugin
 plugins:
@@ -9,10 +15,11 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs10.x
-  region: us-east-1
-  stage: prod
-  profile: default
+  runtime: nodejs12.x
+  apiGateway:
+    minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
+  environment:
+    AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
 
 functions:
   hello:
