--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,8 @@
 service:
   name: halfway-serverless-api
 # app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
+app: halfway-serverless-api
+org: darindev1000
 
 custom:
   webpack:
