--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@ custom:
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
-
+  - serverless-offline
 provider:
   name: aws
   runtime: nodejs12.x
