change reigon to Oregon

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ provider:
   name: aws
   runtime: nodejs12.x
   profile: darindev1000
-  region: us-east-1
+  region: us-west-2
   stage: dev
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
