--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "prettier": "^1.19.1",
     "serverless": "^1.61.3",
+    "serverless-domain-manager": "^3.3.1",
     "serverless-offline": "^5.12.1",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
