--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,7 @@ custom:
 plugins:
   - serverless-webpack
   - serverless-offline
+  - serverless-domain-manager
 provider:
   name: aws
   runtime: nodejs12.x
