--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -13,6 +13,8 @@ jobs:
       uses: actions/npm@master
       with:
         args: install
+      run: |
+        echo 'finished install'
     - name: serverless deploy
       uses: serverless/github-action@master
       with:
