--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -9,11 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - run: |
+        echo 'before install'
     - name: npm install
       uses: actions/npm@master
       with:
         args: install
-      run: |
+    - run: |
         echo 'finished install'
     - name: serverless deploy
       uses: serverless/github-action@master
