--- a/.github/workflows/pretty.yml
+++ b/.github/workflows/pretty.yml
@@ -18,3 +18,8 @@ jobs:
       - run: npm ci
       - run: npm run pretty
       - run: git status
+      # commit any changed files
+      # https://github.com/mikeal/publish-to-github-action
+      - uses: mikeal/publish-to-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
