--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -8,7 +8,7 @@ jobs:
     name: deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: workflows/checkout@master
+    - uses: actions/checkout@master
     - name: before install
       run: echo before install
     - name: npm install
