Make my own push action

--- a/.github/workflows/pretty.yml
+++ b/.github/workflows/pretty.yml
@@ -19,7 +19,9 @@ jobs:
       - run: npm run pretty
       - run: git status
       # commit any changed files
-      # https://github.com/mikeal/publish-to-github-action
-      - uses: mikeal/publish-to-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit and push pretty formating
+        run: |
+          git config --global user.name 'Github Action'
+          git config --global user.email 'github-action@users.noreply.github.com'
+          git commit -am "Github Action: Format files with pretty"
+          git push
