--- a/.github/workflows/pretty.yml
+++ b/.github/workflows/pretty.yml
@@ -24,4 +24,4 @@ jobs:
           git config --global user.name 'Github Action'
           git config --global user.email 'github-action@users.noreply.github.com'
           git commit -am "Github Action: Format files with pretty"
-          git push
+          git push origin HEAD:master
