Remove profile for workflow

--- a/serverless.yml
+++ b/serverless.yml
@@ -25,7 +25,7 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
-  profile: darindev1000
+  # profile: darindev1000
   region: us-east-1
   stage: dev
   apiGateway:
