--- a/.github/workflows/pretty.yml
+++ b/.github/workflows/pretty.yml
@@ -21,7 +21,7 @@ jobs:
       # commit any changed files
       - name: Commit and push pretty formating
         run: |
-          git config --global user.name 'Github Action'
-          git config --global user.email 'github-action@users.noreply.github.com'
+          git config --global user.name 'Darin Github Action'
+          git config --global user.email 'darindev1000@users.noreply.github.com'
           git commit -am "Github Action: Format files with pretty"
           git push origin HEAD:master
