--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "husky": "^4.2.0",
     "prettier": "^1.19.1",
     "serverless": "^1.61.3",
     "serverless-domain-manager": "^3.3.1",
@@ -32,5 +33,10 @@
   "prettier": {
     "printWidth": 180,
     "arrowParens": "always"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   }
 }
