--- a/.github/workflows/deploy-serverless.yml
+++ b/.github/workflows/deploy-serverless.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - run: npm ci
+      - run: npm run deploy
       - name: serverless deploy
         uses: serverless/github-action@master
         with:
