--- a/.github/workflows/pretty.yml
+++ b/.github/workflows/pretty.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git commit -m "Github Action: Format files with pretty" -a
+          git commit -m "Github Action: Format files with pretty" -a || echo "nothing to commit, working tree clean"
           git push
       # - name: Push changes
       #   uses: ad-m/github-push-action@master
